# TurboMarket

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
apps/accounts/: admin.py  urls.py
apps/accounts/enums/: __init__.py  user_roles.py
apps/accounts/forms/: __init__.py  authorization.py  otp.py  registration.py
apps/accounts/migrations/: 0001_initial.py  0002_sellerprofile_buyerprofile.py  0003_authcode.py  0004_alter_authcode_options_alter_buyerprofile_options_and_more.py
apps/accounts/models/: __init__.py  user.py
apps/accounts/services/: auth.py  email.py  otp.py  password_reset.py  registration.py
apps/accounts/tasks/: send_otp.py
apps/accounts/views/: __init__.py  authorization.py  otp.py  registration.py
apps/discounts/: admin.py
apps/discounts/enums/: __init__.py  discount_types.py
apps/discounts/migrations/: 0001_initial.py
apps/discounts/models/: __init__.py
apps/orders/: admin.py  urls.py
apps/orders/enums/: order_statuses.py
apps/orders/forms/: checkout_form.py
apps/orders/migrations/: 0001_initial.py  0002_orderitem.py
apps/orders/models/: __init__.py  order.py  order_item.py
apps/orders/services/: order_service.py  send_order.py
apps/orders/tasks/: send_order_mail.py
apps/orders/views/: checkout.py  success.py
apps/pages/: urls.py
apps/pages/views/: main_page.py
apps/products/: admin.py  urls.py
apps/products/enums/: product_statuses.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: __init__.py  product.py
apps/stores/: admin.py  urls.py
core/: settings.py  urls.py
(+43 files in other folders)
