[project]
name = "turbomarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.2",
    "django==4.2",
    "django-simple-captcha>=0.6.3",
    "flower>=2.0.1",
    "pillow>=12.1.0",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
]
